--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </section>
     
         <!--TEAM-->
-        <section class="section-group substrate">
+        <section class="section-group">
             <div class="container">
                 <h2 class="section-title"> Наша команда </h2> 
                 <ul class="team list">
