--- a/portfolio.html
+++ b/portfolio.html
@@ -22,16 +22,16 @@
                 </ul>
             </nav>        
                 <ul class="auth list">
-                    <li class="icons-contact item">
-                        <a href="mailto:info@devstudio.com" class="nav link"> 
+                    <li class="item">
+                        <a href="mailto:info@devstudio.com" class="nav icons-contact link"> 
                             <svg class="icons-header" width="16px" height="12px">
                                 <use href="./img/Главная/sprite-icons.svg#icon-envelope"></use>
                             </svg>
                             info@devstudio.com 
                         </a> 
                     </li>
-                    <li class="icons-contact item">
-                        <a href="tel:+380961111111" class="nav link"> 
+                    <li class="item">
+                        <a href="tel:+380961111111" class="nav icons-contact link"> 
                             <svg class="icons-header" width="10px" height="16px">
                                 <use href="./img/Главная/sprite-icons.svg#icon-smartphone"></use>
                             </svg>
