скопировала футер с домашней в портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -156,9 +156,10 @@
     </main>
 
     <!--Footer-->
-    <footer class="footer-background">
+   <!--Footer-->
+   <footer class="footer-background">
         <div class="container footer-block">
-            <div>
+            <div class="footer-left">
                 <a href="./index.html" target="_blank" class="logo">  
                     <span class="logo-web">Web</span><span class="logo-studio">Studio</span> </a>
                 <address class="footer-address"> 
@@ -171,7 +172,7 @@
             </div>
 
     <!--Join-->
-             <div class="footer-join">
+            <div class="footer-join">
                 <h2 class="join-title">Присоединяйтесь</h2>
                 <ul class="icon-group list">
                     <li class="socials">
