--- a/index.html
+++ b/index.html
@@ -59,33 +59,41 @@
                 <!--<h2> FEATURE </h2>-->
                 <ul class="feature-list list">
                     <li class="desc">
-                        <svg class="icon-feature back-feature" width="70px" height="70px">
-                            <use href="./img/Главная/sprite-icons.svg#icon-antenna"></use>
-                        </svg>
+                        <div class="icon-feature">
+                            <svg class="back-feature" width="70px" height="70px">
+                                <use href="./img/Главная/sprite-icons.svg#icon-antenna"></use>
+                            </svg>
+                        </div>
                         <h3 class="title">Внимание к деталям</h3> 
                         <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции. </p>
                     </li>
 
                     <li class="desc"> 
-                        <svg class="icon-feature back-feature" width="70px" height="70px">
-                            <use href="./img/Главная/sprite-icons.svg#icon-clock"></use>
-                        </svg>
+                        <div class="icon-feature">
+                            <svg class="back-feature" width="70px" height="70px">
+                                <use href="./img/Главная/sprite-icons.svg#icon-clock"></use>
+                            </svg>
+                        </div>
                         <h3 class="title">Пунктуальность</h3> 
                         <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой. </p>
                     </li>
 
                     <li class="desc">
-                        <svg class="icon-feature back-feature" width="70px" height="70px">
-                            <use href="./img/Главная/sprite-icons.svg#icon-diagram"></use>
-                        </svg>
+                        <div class="icon-feature">
+                            <svg class="back-feature" width="70px" height="70px">
+                                <use href="./img/Главная/sprite-icons.svg#icon-diagram"></use>
+                            </svg>
+                        </div>
                         <h3 class="title">Планирование</h3> 
                         <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает. </p>
                     </li>
 
                     <li class="desc">
-                        <svg class="icon-feature back-feature" width="70px" height="70px">
-                            <use href="./img/Главная/sprite-icons.svg#icon-astronaut"></use>
-                        </svg> 
+                        <div class="icon-feature">
+                            <svg class="back-feature" width="70px" height="70px">
+                                <use href="./img/Главная/sprite-icons.svg#icon-astronaut"></use>
+                            </svg> 
+                        </div>
                         <h3 class="title">Современные технологии</h3> 
                         <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий. </p>
                     </li>
