--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
     </header>
 
     <main>
-        <section>
+        <section class="main-portfolio">
             <!--FILTER-->
             <!-- <h1> Портфолио </h1> -->
             <div class="container content">    
