--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <!--header-->
     <header>
         <div class="container hat">
-            <nav class="main-nav hat">
+            <nav class="hat">
                 <a href="./index.html" target="_blank" class="logo">  <span class="logo-web">Web</span>Studio </a>
                 <ul class="site list ">
                     <li class="item"> <a href="./index.html" target="_blank" class="nav link"> Студия </a> </li>
