--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container hat">
             <nav class="main-nav hat">
-                <a href="./index.html" target="_blank" class="logo">  <span class="logo-web">Web</span>Studio </a>
+                <a href="./index.html" class="logo">  <span class="logo-web">Web</span>Studio </a>
                 <ul class="site list">
                     <li class="item"> <a href="./index.html" target="_blank" class="nav link current"> Студия </a> </li>
                     <li class="item"> <a href="./portfolio.html" target="_blank" class="nav link"> Портфолио </a> </li>
@@ -336,7 +336,7 @@
     <footer class="footer-background">
         <div class="container footer-block">
             <div class="footer-left">
-                <a href="./index.html" target="_blank" class="logo">  
+                <a href="./index.html" class="logo">  
                     <span class="logo-web">Web</span><span class="logo-studio">Studio</span> </a>
                 <address class="footer-address"> 
                     <p class="address"> г. Киев, пр-т Леси Украинки, 26 </p>
